# rigel

./: .gitignore  .prettierrc  .stylelintrc.mjs  README.md  eslint.config.js  eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.vue  app.html  main.ts
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  converter.rs  lib.rs  main.rs  utils.rs
src-tauri/src/cmd/: encrypt.rs  server.rs  system.rs
src-tauri/src/converter/: svg_to_png.rs
src-tauri/src/shell/: ffmpeg.rs
src-tauri/src/utils/: crypto.rs  files.rs  font.rs  gpu.rs  server.rs  window.rs
src/components/: ActionBar.vue  Logo.vue
src/components/common/: SelectFile.vue  TimeInput.vue  VideoPlay.vue
src/components/encryption/: FileView.vue  VideoView.vue
src/components/ffmpeg/: AppendView.vue  ConvertView.vue  EditView.vue  HighlightView.vue  MergeView.vue  VideoPlayer.vue  type.d.ts
src/components/image/: ImageView.vue
src/hooks/: useWindow.ts
src/lib/common/: ProgressSlider.svelte  SelectFile.svelte  TimeInput.svelte
src/lib/ffmpeg/: VideoInfo.svelte  type.ts
src/lib/icons/: ArcticonsFps.svelte  ArrowSwitch.svelte  ButtonLoading.svelte  EncryptionIcon.svelte  FFmpegAppend.svelte  FFmpegConvert.svelte  FFmpegHighlight.svelte  FFmpegIcon.svelte  FFmpegMerge.svelte  FileVideoOpen.svelte  HomeIcon.svelte  ImageIcon.svelte  LineMdArrowSmallLeft.svelte  LineMdPlayFilled.svelte  LineMdPlayFilledToPauseTransition.svelte  LineMdVolumeHighFilled.svelte  LineMdVolumeLowFilled.svelte  LineMdVolumeMediumFilled.svelte  MdiClose.svelte  MdiDecryptedVariant.svelte  MdiDelete.svelte  MdiEncryption.svelte  MdiEncryptionQuestion.svelte  MdiEye.svelte  MdiEyeOff.svelte  MdiFileImage.svelte  MdiFullscreen.svelte  MdiFullscreenExit.svelte  MdiHeadphones.svelte  MdiPlayCircleOutline.svelte  MdiTransitConnectionHorizontal.svelte  MdiVideoHomeSystem.svelte  MenuLeftIcon.svelte  MenuRightIcon.svelte  RaphaelVideo.svelte  SettingIcon.svelte  SolarAddCircleLinear.svelte  SolarClockSquareLinear.svelte  SolarFileSmileLinear.svelte  SolarVideoFrame2Broken.svelte  (+2 more)
src/lib/modal/: PlayerModal.svelte
src/lib/state/: index.ts  (+1 more)
src/router/: index.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/types/: listen.ts  video.ts
src/utils/: Constant.ts  File.ts  LoggerWrapper.ts  PlatformDetector.ts  TimeFormat.ts  TrayWrapper.ts  WebGPUDrawer.ts  WebVitalsObserver.ts  index.ts  webviewWindow.ts
src/views/: Encryption.vue  FFmpeg.vue  Home.vue  Image.vue  Settings.vue
src/vuetify/: index.ts
(+15 files in other folders)
