[package]
name = "rigel"
version = "0.1.0"
description = "A Tauri App"
authors = ["lilei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rigel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-os = "2.0.0"

resvg = "0.45.1"
tiny-skia = "0.11.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

opener = "0.8.3"
tauri-plugin-log = "2"
log = "^0.4"
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-shell = "2"

wgpu = { version = "27", default-features = false, features = ["vulkan", "gles", "metal"] }

regex = "1.12.2"

tokio = "1.49.0"
tokio-util = { version = "0.7.18", features = ["io"] }

argon2 = "0.5.3"
chacha20 = "0.9.1"
rand = "0.9.2"

axum = { version = "0.8.8", features = ["macros"] }
bytes = "1.11.0"
futures-util = "0.3.31"

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。
